Fixed up large images overflowing the display
Limit the images to the size of the area and with a little extra room
for clicking off.

--- a/astro_pi_cam/static/astropi.css
+++ b/astro_pi_cam/static/astropi.css
@@ -7153,11 +7153,17 @@ body {
     color: white; }
 
 .img-container {
-  display: none;
   width: 100%;
   height: 100%;
   text-align: center; }
+  .img-container.modal {
+    display: none; }
   .img-container img {
+    display: block;
+    max-height: 85vh;
+    max-width: 90vw;
+    width: auto;
+    height: auto;
     position: absolute;
     top: 50%;
     left: 50%;
